# Cilia-Segmentation

./: CONTRIBUTORS.md  README.md  REQUIREMENTS.txt  setup.cfg  setup.py
hastings/: __main__.py  fit_predict_unet.py  io_support.py  optical_flow.py  prepare_data.py  preprocessing.py  tiramisu_model.py  unet_model.py
scripts/: install-gpu-drivers.sh
tests/: io_test.py  optical_flow_test.py  preprocessing_test.py
