[metadata]
name = hastings
version = 0.1.0-dev
description = Cilia Segmentation
url = https://github.com/dsp-uga/Hastings-p4
maintainer = 'Ankit Vaghela, Vyom Shrivastava, Weiwen Xu'
maintainer_email = 'ajv08909@uga.edu, vs14490@uga.edu, wx37523@uga.edu'
license = MIT
packages = hastings

[options]
setup_requires = pytest-runner
tests_require = pytest

[aliases]
test = pytest
